--- a/Examples/One/tokens-green.less
+++ b/Examples/One/tokens-green.less
@@ -1,3 +1,4 @@
+@color-white:                           #FFFFFF;
 @color-primary:                         #6DAF20;
 @color-secondary:                       #53683B;
 @color-text-primary:                    #47485a;
