--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -1,3 +1,11 @@
+.Styles {
+  .Backgrounds {
+      .Brand Back {
+          background-color: yellowgreen;
+      }     
+  }
+}
+
 .Styles .Controls .Buttons .Submit {
   .Ok, .Cancel {
     Text {
@@ -42,3 +50,12 @@
     }
   }
 }
+
+.Controls .Controls .Buttons .Submit {
+  .Ok {
+    Label {
+      color: @color-white;                      // text-color
+    }
+  }
+}
+
