--- a/Examples/One/tokens-blue.less
+++ b/Examples/One/tokens-blue.less
@@ -2,5 +2,6 @@
 @color-primary:                         #0071ba;
 @color-secondary:                       #4A4A4A;
 @color-text-primary:                    #47485a;
+@shadow-large:                          0px 5px 10px rgba(0,0,0,0.1);	// Clickable tiles
 
 @radius-medium:                         5px; //Regular tiles, buttons, input fields
