--- a/Examples/One/tokens-blue.less
+++ b/Examples/One/tokens-blue.less
@@ -5,3 +5,5 @@
 @shadow-large:                          0px 5px 10px rgba(0,0,0,0.1);	// Clickable tiles
 
 @radius-medium:                         5px; //Regular tiles, buttons, input fields
+
+@font-size-normal:                      12px;
