--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -3,6 +3,7 @@
     Text {
         color: @color-white;
         font-size: @font-size-normal;
+        text-align: justify;
     }  
     Back{
         background-color: @color-primary;
