--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -9,6 +9,7 @@
         background-color: @color-primary;
         border-color:      @color-secondary;
         border-radius:     10px;
+        text-align: justify;
     }
   }
   .Cancel{
