--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -4,10 +4,11 @@
         color: @color-white;
         font-size: @font-size-normal;
         text-align: justify;
+        vertical-align: baseline;
     }  
     Back{
         background-color: @color-primary;
-        border-color:      @color-secondary;
+        border-color:      none;
         border-radius:     10px;        
     }
   }
@@ -15,6 +16,7 @@
     Text {
         color: @color-white;
         font-size: @font-size-normal;
+
       }  
       Back{
         background-color: @color-secondary;
