--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -4,7 +4,7 @@
         color: @color-white;
         font-size: @font-size-normal;
         text-align: justify;
-        vertical-align: baseline;
+        vertical-align: bottom;
     }  
     Back{
         background-color: @color-primary;
