--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -7,15 +7,16 @@
         vertical-align: bottom;
     }  
     Back{
-        background-color: @color-primary;
-        border-color:      none;
-        border-radius:     10px;        
+        background-color:   @color-primary;
+        border-color:       @color-secondary;
+        border-radius:     10px;   
+        border-width:       1px;
     }
   }
   .Cancel{
     Text {
-        color: @color-white;
-        font-size: @font-size-normal;
+        color:              @color-white;
+        font-size:          @font-size-normal;
 
       }  
       Back{
@@ -26,9 +27,9 @@
   }
 }
 
-
+/*
 .Controls .Buttons .Submit .Buttons .Submit .Ok{
     .Text {
         color: black;
     }
-}
+}*/
