--- a/Examples/One/tokens-blue.less
+++ b/Examples/One/tokens-blue.less
@@ -2,7 +2,8 @@
 @color-primary:                         #0071ba;
 @color-secondary:                       #4A4A4A;
 @color-text-primary:                    #47485a;
-@shadow-large:                          0px 5px 10px rgba(0,0,0,0.1);	// Clickable tiles
+@shadow-large:                          0px 5px 10px rgba(0,0,0,0.5);
+@inner-shadow-1:                        inset 0px 5px 10px rgba(0,0,0,0.2);
 
 @radius-medium:                         5px; //Regular tiles, buttons, input fields
 
