--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -1,43 +1,7 @@
-@import "tokens-blue.less";
-
 .Controls .Buttons .Submit {
   .Ok {
-    Text {
-        color:              @color-white;
-        font-size:          @font-size-normal;
-        font-family:        Verdana;
-        text-align:         center;
-        vertical-align:     bottom;        
-    }  
     Back{
-        background-color:   @color-primary;
-        border-color:       @color-secondary;
-        border-radius:      10px;   
-        border-width:       1px;
-        box-shadow:         @shadow-large;
+        background-color:     linear-gradient(91deg,black,white,red)
     }
-  }
-  .Cancel{
-    Text {
-        color:              @color-white;
-        font-size:          @font-size-normal;
-        font-family:        "Verdana";
-        text-align:         center;
-      }  
-      Back{
-        background-color:   @color-secondary;
-        border-color:       @color-secondary;
-        border-radius:      2px;
-        border-width:       4px;
-        border-position:    inside;
-        box-shadow:         @inner-shadow-1;
-      }
   }
 }
-
-/*
-.Controls .Buttons .Submit .Buttons .Submit .Ok{
-    .Text {
-        color: black;
-    }
-}*/
