--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -35,9 +35,7 @@
   }
 }
 
-/*
-.Controls .Buttons .Submit .Buttons .Submit .Ok{
-    .Text {
-        color: black;
-    }
-}*/
+
+#Controls #Buttons #Submit #Ok .Group .Standalone{
+   color: white;
+}
