--- a/Examples/One/tokens-green.less
+++ b/Examples/One/tokens-green.less
@@ -2,7 +2,9 @@
 @color-primary:                         #6DAF20;
 @color-secondary:                       #53683B;
 @color-text-primary:                    #47485a;
-@shadow-large:             0 2px 5px rgba(0,0,0,0.1);	// Tooltips
+@shadow-large:                           0 2px 5px rgba(0,0,0,0.1);	
+@inner-shadow-1:                        inset 0px 5px 10px rgba(0,0,0,0.2);
 
 @radius-medium:                         2px; //Regular tiles, buttons, input fields
 
+@font-size-normal:                      10px;
