Supported space in layers

--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -36,6 +36,6 @@
 }
 
 
-#Controls #Buttons #Submit #Ok .Group .Standalone{
-   color: white;
+#Artboard__1 .Group__1 .Standalone{
+        color: red;
 }
