--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -36,6 +36,13 @@
 }
 
 
-#Artboard__1 .Group__1 .Standalone{
-        color: red;
+#Controls{
+    #Buttons #Submit #Ok .Group1{
+        .Standalone{
+            color: blue;
+        }
+        .Shape{
+            border-color:      2px;
+        }
+    }
 }
