--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -42,7 +42,7 @@
             color: blue;
         }
         .Shape{
-            border-color:      2px;
+            border-radius:      2px;
         }
     }
 }
