Supported __ as space in Style also

--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -1,7 +1,7 @@
 @import "tokens-blue.less";
 
 .Controls .Buttons .Submit {
-  .Ok {
+  .Ok__Button {
     Text {
         color:              @color-white;
         font-size:          @font-size-normal;
