--- a/Examples/One/tokens-blue.less
+++ b/Examples/One/tokens-blue.less
@@ -3,7 +3,7 @@
 @color-secondary:                       #4A4A4A;
 @color-text-primary:                    #47485a;
 @shadow-large:                          0px 5px 10px rgba(0,0,0,0.5);
-@inner-shadow-1:                        inset 0px 5px 10px rgba(255,0,0,1);
+@inner-shadow-1:                        inset -1 0px 0px #DFE4EA;
 
 @radius-medium:                         5px; //Regular tiles, buttons, input fields
 
