Resurrected images (with new width and height properties)

--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -46,3 +46,10 @@
         }
     }
 }
+
+
+#Artboard__1 .Logo{
+    image:        ~"images/new-logo.jpg";
+    height:       50%;
+    width:        120px;
+}  
