Improved image heght and width calucataion. Supportd border-* and box-shadow for image

--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -49,7 +49,9 @@
 
 
 #Artboard__1 .Logo{
-    image:        ~"images/new-logo.jpg";
-    height:       50%;
-    width:        120px;
+    image:               ~"images/new-logo.jpg";
+    width:              100px;
+    border-color:       @color-secondary;
+    border-width:       3px;
+    box-shadow:         @shadow-large;
 }  
