Supported left, top, right and bottom for image

--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -53,5 +53,9 @@
     width:              100px;
     border-color:       @color-secondary;
     border-width:       3px;
-    box-shadow:         @shadow-large;
+    box-shadow:         @shadow-large;    
+    top:                11px;
+    bottom:             22px;
+    left:               2px;
+    right:              33px;
 }  
