--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -11,7 +11,7 @@
     }  
     Back{
         background-color:   @color-primary;
-        border-color:       @color-secondary;
+        border-color:       none;
         border-radius:      10px;   
         border-width:       1px;
         box-shadow:         @shadow-large;
