updated SCSS example

--- a/Examples/Two/_constants.scss
+++ b/Examples/Two/_constants.scss
@@ -1,3 +1,6 @@
+// Thanks to Sérgio Gomes for precalculating those values
+// https://medium.com/dev-channel/using-sass-to-automatically-pick-text-colors-4ba7645d2796
+
 $channel-values:
   0
   .0003035269835488375
