--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -39,7 +39,7 @@
 #Controls{
     #Buttons #Submit #Ok .Group1{
         .Standalone{
-            color: blue;
+            color: red;
         }
         .Shape{
             border-radius:      2px;
