--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -12,7 +12,7 @@
     Back{
         background-color:   @color-primary;
         border-color:       none;
-        border-radius:      10px;   
+        border-radius:      5px 5px 0 0;   
         border-width:       1px;
         box-shadow:         @shadow-large;
     }
