Supported  line-height in pixels

--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -7,7 +7,8 @@
         font-size:          @font-size-normal;
         font-family:        Verdana;
         text-align:         center;
-        vertical-align:     bottom;        
+        vertical-align:     bottom;
+        line-height:        30px;        
     }  
     Back{
         background-color:   @color-primary;
