Supported mutliply borders

--- a/Examples/One/sketch-styles.less
+++ b/Examples/One/sketch-styles.less
@@ -33,6 +33,13 @@
         border-position:    inside;
         box-shadow:         @inner-shadow-1;
       }
+      Back{
+        background-color:   @color-secondary;
+        border-color:       @color-primary;
+        border-width:       10px;
+        border-position:    outside;
+        box-shadow:         @inner-shadow-1;
+      }
   }
 }
 
