--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -2,7 +2,7 @@
 .Controls .Buttons .Submit {
   .Ok__Button {
     Text {
-        color:              @color-white;
+        color :              @color-white;
         font-size:          @font-size-normal;
         font-family:        Verdana;
         text-align:         center;
@@ -24,20 +24,20 @@
         font-family:        "Verdana";
         text-align:         center;
       }  
-      Back{
-        background-color:   @color-secondary;
-        border-color:       @color-secondary;
-        border-radius:      2px;
-        border-width:       4px;
-        border-position:    inside;
-        box-shadow:         @inner-shadow-1;
+      Back {
+        border-width: 3px;
+        border-color: #f56565;
+        border-position: inside;
+      }
+      Back {
+        border-width: 5px;
+        border-color: white;
+        border-position: inside;
       }
       Back{
-        background-color:   @color-secondary;
-        border-color:       @color-primary;
-        border-width:       10px;
-        border-position:    outside;
-        box-shadow:         @inner-shadow-1;
+        border-width: 8px;
+        border-color: #f56565;
+        border-position: inside;
       }
   }
 }
