Supported font-style: normal OR italic

--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -5,6 +5,7 @@
         color :              @color-white;
         font-size:          @font-size-normal;
         font-family:        Verdana;
+        font-style:         normal;
         text-align:         center;
         vertical-align:     bottom;
         line-height:        30px;        
