Support for text-decoration

--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -23,7 +23,10 @@
         color:              @color-white;
         font-size:          @font-size-normal;
         font-family:        "Verdana";
+        font-style:         italic;
         text-align:         center;
+        text-decoration:    underline;
+        text-transform:     uppercase;        
       }  
       Back {
         border-width: 3px;
