Supported  line-spacing

--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -27,6 +27,7 @@
         text-align:         center;
         text-decoration:    underline;
         text-transform:     uppercase;        
+        letter-spacing:     normal;
       }  
       Back {
         border-width: 3px;
