--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -1,7 +1,7 @@
 
 .Controls .Buttons .Submit {
   .Ok__Button {
-    Text {
+    Text.Me {
         color :              @color-white;
         font-size:          @font-size-normal;
         font-family:        Verdana;
