Suported border-style: dashed  OR dotted

--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -12,10 +12,11 @@
     }  
     Back{
         background-color:   @color-primary;
-        border-color:       none;
+        border-color:     #f56565;
         border-radius:      5px 5px 0 0;   
         border-width:       1px;
         box-shadow:         @shadow-large;
+        border-style:       dotted;
     }
   }
   .Cancel{
