--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -1,7 +1,7 @@
 
 .Controls .Buttons .Submit {
   .Ok__Button {
-    Text.Me {
+    Text{
         color :              @color-white;
         font-size:          @font-size-normal;
         font-family:        Verdana;
@@ -9,6 +9,7 @@
         text-align:         center;
         vertical-align:     bottom;
         line-height:        30px;        
+        kerning:            2.5;
     }  
     Back{
         background-color:   @color-primary;
