--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -15,9 +15,9 @@
         background-color:   @color-primary;
         border-color:     #f56565;
         border-radius:      5px 5px 0 0;   
-        border-width:       1px;
+        border-width:       4px;
         box-shadow:         @shadow-large;
-        border-style:       dotted;
+        border-style:       dashed;
     }
   }
   .Cancel{
