--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -49,17 +49,7 @@
   }
 }
 
-
-#Controls{
-    #Buttons #Submit #Ok .Group1{
-        .Standalone{
-            color: red;
-        }
-        .Shape{
-            border-radius:      2px;
-        }
-    }
-}
+#button__ #__03__tertiary__ #__medium__ #__01__text__ #__01__enabled {.Background{ background-color: red; }}
 
 
 #Artboard__1 .Logo{
