--- a/Styles/Tests/Buttons/sketch-styles.scss
+++ b/Styles/Tests/Buttons/sketch-styles.scss
@@ -51,13 +51,4 @@ $font-size-normal:                      12px;
 }
 
 
-#Controls{
-    #Buttons #Submit #Ok .Group1{
-        .Standalone{
-            color: blue;
-        }
-        .Shape{
-            border-radius:      2px;
-        }
-    }
-}
+#button__ #__03__tertiary__ #__medium__ #__01__text__ #__01__enabled {.Background{ background-color: red; }}
