--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -61,3 +61,19 @@
     left:               2px;
     right:              33px;
 } 
+
+
+.Buttons{
+    .Disabled{
+        background-color: red;
+    }
+}
+
+#Buttons{
+    #Disabled{
+        Rectangle{
+            //border-radius:  2px;  
+            sklayer-style:   "Buttons / Disabled";
+        }
+    }
+}
