Assign shared style to a layer

--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -72,7 +72,7 @@
 #Buttons{
     #Disabled{
         Rectangle{
-            //border-radius:  2px;  
+            border-radius:  2px;  
             sklayer-style:   "Buttons / Disabled";
         }
     }
