--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -74,6 +74,7 @@
         Rectangle{
             border-radius:  2px;  
             sklayer-style:   "Buttons/Disabled";
+            //sklayer-style:   "Controls/Buttons/Raised/Default/Back";
         }
     }
 }
