Support for border-line-end and border-line-join

--- a/Styles/Tests/Buttons/sketch-styles.less
+++ b/Styles/Tests/Buttons/sketch-styles.less
@@ -67,6 +67,12 @@
     .Disabled{
         background-color: red;
     }
+    .Lined{
+        border-width:        10px;
+        border-color:      white;
+        border-line-end:            round;
+        border-line-join:            miter;
+    }
 }
 
 #Buttons{
