--- a/Styles/Releases/6.11.0/styles.less
+++ b/Styles/Releases/6.11.0/styles.less
@@ -1,6 +1,31 @@
-   #Group{
+@button-width:                          200;
+@button-height:                         80;
+@button-label-margin:                   25;
+
+#Controls #Buttons #DefaultSubmit{
        .Back{
-            background-color: blue;
-            padding:           10px;  
+            height:                      @button-height;
+            width:                       @button-width;
+            background-color:           lightgray;       
+            border-width:                 1px;          
+            border-color:               gray;
        }
+       .Top{
+            height:                      2px;
+            width:                       @button-width;
+            background-color:            black;
+            border-width:                0px;
+       }
+       .Label{
+            margin-left:                 @button-label-margin;
+            margin-top:                  @button-label-margin;
+            height:                      20px;
+            width:                       @button-width - @button-label-margin*2;
+            pt-text:                     Submit Button;    
+            color:                       white;           
+       }
+       ._This{
+           height:                       @button-height;
+           width:                        @button-width;
+        }
    }
