--- a/Styles/Releases/6.12.0/styles.less
+++ b/Styles/Releases/6.12.0/styles.less
@@ -1,5 +1,7 @@
 
 .Style{
     color:                        black;               
-    pt-paragraph-spacing:           10.3;
+    pt-paragraph-spacing:           40;
+    line-height:                   10px;
+    font-size:                      13.3px;
 }
