Fixed background: none behaviour

--- a/Styles/Tests/Buttons/Test-Green.less
+++ b/Styles/Tests/Buttons/Test-Green.less
@@ -5,4 +5,4 @@
 @btn-border-style:                      none;
 @btn-font-size:                         10px;
 
-@import "Tokens.less";
+@import "_Tokens.less";
