--- a/Styles/Tests/Buttons/Test-Blue.less
+++ b/Styles/Tests/Buttons/Test-Blue.less
@@ -5,4 +5,4 @@
 @btn-border-style:                      dashed;
 @btn-font-size:                         12px;
 
-@import "Tokens.less";
+@import "_Tokens.less";
