--- a/Styles/Tests/Buttons/Test-Blue.scss
+++ b/Styles/Tests/Buttons/Test-Blue.scss
@@ -5,4 +5,4 @@ $btn-radius:                            5px;
 $btn-border-style:                      dashed;
 $btn-font-size:                         12px;
 
-@import "_Tokens.scss";
+@import "_Styles.scss";
