--- a/Styles/Tests/Buttons/Test-Green.scss
+++ b/Styles/Tests/Buttons/Test-Green.scss
@@ -5,4 +5,4 @@ $btn-radius:                            0px;
 $btn-border-style:                      none;
 $btn-font-size:                         10px;
 
-@import "_Tokens.scss";
+@import "_Styles.scss";
