--- a/Styles/Tests/Buttons/_Styles.less
+++ b/Styles/Tests/Buttons/_Styles.less
@@ -29,6 +29,8 @@
     bottom:             22px;
     left:               2px;
     right:              33px;
+    border-width:       2px;
+    border-color:       blue;
 } 
 
 
