--- a/Styles/Tests/Buttons/_Styles.less
+++ b/Styles/Tests/Buttons/_Styles.less
@@ -23,8 +23,9 @@
 }
 /// Other technics
 
+@base-path:                 "images/";
 #Artboard__1 .Logo{
-    image:               ~"images/new-logo.jpg";
+    image:               ~"@{base-path}/new-logo.jpg";
     width:              100px;
     bottom:             22px;
     left:               2px;
