Fixed image paths for SASS

--- a/Styles/Tests/Buttons/_Styles.less
+++ b/Styles/Tests/Buttons/_Styles.less
@@ -25,7 +25,7 @@
 
 @base-path:                 "images/";
 #Artboard__1 .Logo{
-    image:               ~"@{base-path}/new-logo.jpg";
+    image:               ~"@{base-path}/old-logo.png";
     width:              100px;
     bottom:             22px;
     left:               2px;
