--- a/Styles/Tests/Buttons/_Styles.scss
+++ b/Styles/Tests/Buttons/_Styles.scss
@@ -23,6 +23,24 @@
     } 
 }
   /// Other technics
+
+#Artboard__1 .Logo{
+    image:              "images/old-logo.png";
+    width:              100px;
+    bottom:             22px;
+    left:               2px;
+    right:              33px;
+    border-width:       2px;
+    border-color:       blue;
+} 
+
+#Artboard__2 .Image{
+    image:               "images/image.svg";
+    //width:              100px;
+    //height:             100px;
+    //bottom:             22px;
+    //left:               2px;
+}
   
   
   .Buttons{
